Add blob for components

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
  /* Base */
 @import "base/fonts.scss";
 @import "base/colors.scss";
+@import "base/layout.scss";
 
  /* Components */
-@import "components/header.scss";
+@import "components/*";
