--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -1,6 +1,7 @@
 section.section {
     background-color: $grey;
     padding: 20px;
+    box-sizing: border-box;
 
     .content-title {
         font-family: $sans-bold;
