--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,7 +1,14 @@
-$black: #1E1E24;
+// $black: #1E1E24;
 
-$light-grey: #CFDEE7;
-$grey: #A1BCCB;
+// $light-grey: #CFDEE7;
+// $grey: #A1BCCB;
 
-$blue: #4472CA;
-$dark-blue: #0A369D;
+// $blue: #4472CA;
+// $dark-blue: #0A369D;
+
+$blue: #2E3C59;
+$navy: #1B2430;
+$white: #EFF1F2;
+$grey: #BDCCC8;
+$green: #687A64;
+$turquoise: #17A8D1
