Add ultimate aesthetic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,4 +14,21 @@
   <body>
     <%= yield %>
   </body>
+ <!-- Oh hello there!
+     ⊂_ヽ
+　     ＼＼ 
+　　    ＼<|°_°|>
+　　　   >　⌒ヽ
+　 　 　/ 　 へ＼
+　　  /　　/　＼＼
+    ﾚ　 ノ　　 ヽ_つ
+　　/　/
+　 /　/|
+　(　(ヽ
+　|　|、＼
+　| 丿 ＼ ⌒)
+　| |　　) /
+ ノ )　　Lﾉ
+(_／﻿
+  -->
 </html>
