--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -27,7 +27,9 @@ section.section {
             box-sizing: border-box;
             border-radius: 100%;
             width: 100%;
-            border: 1px solid black;
+            border: 3px solid $white;
+            position: relative;
+            bottom: 5px;
         }
 
         .about {
