--- a/app/assets/stylesheets/components/home.scss
+++ b/app/assets/stylesheets/components/home.scss
@@ -12,7 +12,7 @@ section.section {
     display: flex;
     justify-content: space-between;
     margin-top: 100px;
-    
+    color: $navy;
 
     .self {
         width: $column-width-left;
