--- a/app/assets/stylesheets/components/project_index.scss
+++ b/app/assets/stylesheets/components/project_index.scss
@@ -31,15 +31,18 @@
             width: 600px;
             height: 100%;
             padding-left: 22px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             
             h5 {
                 font-size: 2rem;
-                margin-top: 20px;
-                margin-bottom: 10px;
+                margin-bottom: 3px;
             }
 
             p {
-
+                margin-top: 8px;
+                margin-bottom: 0;
             }
         }
     }
