--- a/app/assets/stylesheets/components/wakatime.scss
+++ b/app/assets/stylesheets/components/wakatime.scss
@@ -1,3 +1,18 @@
 .wakatime-stats {
     height: 100%;
+    
+    h6 {
+
+        text-align: center;
+    }
+}
+
+.tooltip {
+    background-color: #CCDCF1;
+    border: 1px solid #2F588D;
+    padding: 5px;
+
+    p {
+        margin: 0;
+    }
 }
