--- a/app/assets/stylesheets/components/project_show.scss
+++ b/app/assets/stylesheets/components/project_show.scss
@@ -6,6 +6,15 @@
     font-family: $sans-serif;
     font-size: 1.2em;
 
+    .title-bar {
+        display: flex;
+        justify-content: space-between;
+
+        a {
+            text-decoration: none;
+        }
+    }
+
     h1, h2, h3, h4, h5, h6 {
         font-family: $sans-bold;
     }
