--- a/app/assets/stylesheets/components/project_show.scss
+++ b/app/assets/stylesheets/components/project_show.scss
@@ -1,10 +1,12 @@
 .project-page {
-    width: 800px;
+    width: 780px;
     margin: 0 auto;
+    margin-top: 30px;
     padding: 100px 70px 100px 70px;;
     background-color: white;
     font-family: $sans-serif;
     font-size: 1.2em;
+    border-radius: 10px;
 
     .title-bar {
         display: flex;
