Switch to cdn for vendor files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,8 @@
  */
 
  /* Vendor */
-@import "vendor/normalize.css";
-@import "vendor/skeleton.css";
+// @import "base/normalize.css";
+// @import "base/skeleton.css";
 
  /* Base */
 @import "base/fonts.scss";
